fix: In Location 3, there should be no spacing below the labels in the mobile view, and the mobile and tablet views should match the original component

--- a/editor-components/location/location3/location3.module.scss
+++ b/editor-components/location/location3/location3.module.scss
@@ -64,7 +64,7 @@
             white-space: nowrap;
 
             .continent-name {
-              color: var(--composer-tertiary-color);
+              color: var(--composer-primary-color);
               text-align: justify !important;
               font-size: var(--composer-font-size-md);
             }
@@ -105,7 +105,6 @@
             padding: var(--composer-gap-md);
 
             .continent-name {
-              color: var(--composer-tertiary-color);
               font-size: var(--composer-font-size-sm) !important;
             }
 
@@ -146,7 +145,6 @@
               gap: var(--composer-gap-xs);
 
               .continent-name {
-                color: var(--composer-tertiary-color);
                 font-size: var(--composer-font-size-xs) !important;
               }
 
@@ -160,7 +158,6 @@
     }
 
     .map-container {
-      margin-top: var(--composer-gap-lg);
 
       .map {
         height: 350px;
